fix: Delay Retrieving Data from ES in startup - MEED-1897 Prior to this change, when starting Builders server, the ES is not ready yet and returns 503 HTTP code. This change will delay the access to ES lately in startup phase on cron jobs.